# looplink-starter-project

./: .editorconfig  .env.example  .gitignore  README.md  TECH_NOTES.md  docker-compose.yml  eslint.config.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tasks.py
looplink/django_ext/: apps.py  js_entry.py
looplink/django_ext/htmx/: __init__.py  action.py  debug.py
looplink/django_ext/middleware/: htmx.py
looplink/django_ext/templatetags/: __init__.py  common_tags.py  webpack_tags.py
looplink/project/: settings.py  urls.py  wsgi.py
looplink/ui/base/: apps.py  urls.py  views.py
looplink/ui/base/assets/: common.js  common_entry.js  htmx_example.js
looplink/ui/base/assets/htmx/: csrf_token.js  dj_hx_action.js
looplink/ui/base/templates/base/: default.html  htmx_example.html  layout.html
looplink/ui/base/templates/base/partials/htmx/: htmx_action_error.html  loading_indicator.html
looplink/ui/base/templates/base/partials/htmx_example/: initial_state.html  step_three.html  step_two.html
looplink/ui/base/templates/base/partials/webpack/: javascript.html  stylesheets.html
stickers/: models.py  rewards.py  serializers.py  services.py  tests.py  urls.py  views.py
stickers/migrations/: 0001_initial.py
stickers/templates/stickers/: portal.html
styles/: example.scss  looplink.css
webpack/: config.js
webpack/js_entry/: build.js  build_utils.js  plugins.js  settings.js  utils.js
